Add About, update README

--- a/MostViewedArticles/app/src/main/AndroidManifest.xml
+++ b/MostViewedArticles/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.scrpn.mostviewedarticles.ArticleListActivity" />
         </activity>
+        <activity android:name=".AboutActivity"></activity>
     </application>
 
 </manifest>
